--- a/MobileAppProjectV2/MobileAppProjectV2/CalcPage.xaml
+++ b/MobileAppProjectV2/MobileAppProjectV2/CalcPage.xaml
@@ -3,12 +3,64 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileAppProjectV2.CalcPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Test"  VerticalOptions="Start" 
-                HorizontalOptions="CenterAndExpand" TextColor="Black"/>
-            <Button  x:Name="btnEnter" Text="Enter" 
-                Margin="10, 5, 10, 10"
-                Clicked="btnEnter_Clicked"/>
+        <StackLayout >
+            <Grid x:Name="GridSetUp" Padding="5,0" RowSpacing="5" ColumnSpacing="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+            </Grid>
+            <Label x:Name="resultText" FontSize="48" FontAttributes="Bold" BackgroundColor="Red" Text="8000" Grid.Row="0" Grid.Column="0"
+              TextColor="White" HorizontalTextAlignment="End" VerticalTextAlignment="Center" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"
+                LineBreakMode="NoWrap" Grid.ColumnSpan="2"  />
+
+            <Label x:Name="resultText2" FontSize="48" FontAttributes="Bold" BackgroundColor="Blue" Text="8000" Grid.Row="0" Grid.Column="2"
+              TextColor="White" HorizontalTextAlignment="End" VerticalTextAlignment="Center" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"
+                LineBreakMode="NoWrap" Grid.ColumnSpan="2"  />
+
+            <Button Text="1000"  Margin="10, 5, 10, 10" Grid.Row="1" Grid.Column="0" 
+               BackgroundColor="Blue" TextColor="Black" 
+               FontSize="36" BorderRadius="0" Clicked="OnSelectNumber" />
+
+            <Button Text="1000"  Margin="10, 5, 10, 10" Grid.Row="1" Grid.Column="2"
+               BackgroundColor="Red" TextColor="Black"  
+               FontSize="36" BorderRadius="0" Clicked="OnSelectNumber" />
+
+
+            <Button Text="500"  Margin="10, 5, 10, 10" Grid.Row="2" Grid.Column="0"
+               BackgroundColor="Blue" TextColor="Black"
+               FontSize="36" BorderRadius="0" Clicked="OnSelectNumber" />
+
+            <Button Text="500"  Margin="10, 5, 10, 10" Grid.Row="2" Grid.Column="2"
+               BackgroundColor="Red" TextColor="Black"
+               FontSize="36" BorderRadius="0" Clicked="OnSelectNumber" />
+
+            <Button Text="100"  Margin="10, 5, 10, 10" Grid.Row="3" Grid.Column="0"
+               BackgroundColor="Blue" TextColor="Black"
+               FontSize="36" BorderRadius="0" Clicked="OnSelectNumber" />
+
+            <Button Text="100"  Margin="10, 5, 10, 10" Grid.Row="3" Grid.Column="2"
+               BackgroundColor="Red" TextColor="Black"
+               FontSize="36" BorderRadius="0" Clicked="OnSelectNumber" />
+
+            <Button Text="50"  Margin="10, 5, 10, 10" Grid.Row="4" Grid.Column="0"
+               BackgroundColor="Blue" TextColor="Black"
+                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber" />
+
+            <Button Text="50"  Margin="10, 5, 10, 10" Grid.Row="4" Grid.Column="2"
+               BackgroundColor="Red" TextColor="Black"
+                FontSize="36" BorderRadius="0" Clicked="OnSelectNumber" />
+
+
 
         </StackLayout>
     </ContentPage.Content>
