--- a/MobileAppProjectV2/MobileAppProjectV2/MainPage.xaml
+++ b/MobileAppProjectV2/MobileAppProjectV2/MainPage.xaml
@@ -6,7 +6,7 @@
 
     <StackLayout HorizontalOptions="Center" 
                  VerticalOptions="Center">
-        <Button x:Name="btnEnter" Text="Enter" 
+        <Button x:Name="btnEnter" Text="Click Me" 
                 Margin="10, 5, 10, 10"
                 Clicked="btnEnter_Clicked"/>
 
