--- a/MobileAppProjectV2/MobileAppProjectV2/CalcPage.xaml
+++ b/MobileAppProjectV2/MobileAppProjectV2/CalcPage.xaml
@@ -4,6 +4,7 @@
              x:Class="MobileAppProjectV2.CalcPage">
 
     <StackLayout>
+     <!--Grid that shows the buttons and labels of the LP calculator-->
             <Grid x:Name="GridSetUp" Padding="5,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -19,72 +20,79 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-
-            <Label x:Name="resultText" FontSize="48" FontAttributes="Bold" BackgroundColor="Blue" Text="8000" Grid.Row="0" Grid.Column="0"
+            <!--two labels that show the total remaining  life points of the two players -->
+            <Label x:Name="resultText" FontSize="48" FontAttributes="Bold" BackgroundColor="Blue" Text=" " Grid.Row="0" Grid.Column="0"
               TextColor="White"
                 LineBreakMode="NoWrap" Grid.ColumnSpan="2"  />
 
-            <Label x:Name="resultText2" FontSize="48" FontAttributes="Bold" BackgroundColor="Red" Text="8000" Grid.Row="0" Grid.Column="2"
+            <Label x:Name="resultText2" FontSize="48" FontAttributes="Bold" BackgroundColor="Red" Text=" " Grid.Row="0" Grid.Column="2"
               TextColor="White"
                 LineBreakMode="NoWrap" Grid.ColumnSpan="2"  />
-                
-            <Button Text="+"  Margin="10, 5, 10, 10" Grid.Row="1" Grid.Column="0" 
+              <!--two buttons that add and subtract the values of the buttons below of the remainig total -->
+            <Button Text="+"   Grid.Row="1" Grid.Column="0" 
                BackgroundColor="Blue" TextColor="Black" 
-               FontSize="36" BorderRadius="0" Clicked="OnSelectOperaterBlue" />
+               FontSize="36" BorderRadius="0" Clicked="OnSelectOperaterBlue" Grid.ColumnSpan="2" />
 
-            <Button Text="+"  Margin="10, 5, 10, 10" Grid.Row="1" Grid.Column="2" 
+            <Button Text="+"   Grid.Row="1" Grid.Column="2" 
                BackgroundColor="Red" TextColor="Black" 
-               FontSize="36" BorderRadius="0" Clicked="OnSelectOperaterRed" />
+               FontSize="36" BorderRadius="0" Clicked="OnSelectOperaterRed" Grid.ColumnSpan="2" />
 
-            <Button Text="-"  Margin="10, 5, 10, 10" Grid.Row="2" Grid.Column="0" 
+            <Button Text="-"   Grid.Row="2" Grid.Column="0" 
                BackgroundColor="Blue" TextColor="Black" 
-               FontSize="36" BorderRadius="0" Clicked="OnSelectOperaterBlue" />
+               FontSize="36" BorderRadius="0" Clicked="OnSelectOperaterBlue" Grid.ColumnSpan="2"/>
 
-            <Button Text="-"  Margin="10, 5, 10, 10" Grid.Row="2" Grid.Column="2" 
+            <Button Text="-"   Grid.Row="2" Grid.Column="2" 
                BackgroundColor="Red" TextColor="Black" 
-               FontSize="36" BorderRadius="0" Clicked="OnSelectOperaterRed" />
-
-            <Button Text="1000"  Margin="10, 5, 10, 10" Grid.Row="3" Grid.Column="0" 
+               FontSize="36" BorderRadius="0" Clicked="OnSelectOperaterRed" Grid.ColumnSpan="2"/>
+               <!-- Buttons that set the value of the number being taken away or added to the result number-->
+            <Button Text="1000"   Grid.Row="3" Grid.Column="0" 
                BackgroundColor="Blue" TextColor="Black" 
-               FontSize="36" BorderRadius="0" Clicked="OnSelectNumberBlue" />
+               FontSize="36" BorderRadius="0" Clicked="OnSelectNumberBlue" Grid.ColumnSpan="2"/>
 
-            <Button Text="1000"  Margin="10, 5, 10, 10" Grid.Row="3" Grid.Column="2"
+            <Button Text="1000"   Grid.Row="3" Grid.Column="2"
                BackgroundColor="Red" TextColor="Black"  
-               FontSize="36" BorderRadius="0" Clicked="OnSelectNumberRed" />
+               FontSize="36" BorderRadius="0" Clicked="OnSelectNumberRed" Grid.ColumnSpan="2"/>
 
 
-            <Button Text="500"  Margin="10, 5, 10, 10" Grid.Row="4" Grid.Column="0"
+            <Button Text="500"   Grid.Row="4" Grid.Column="0"
                BackgroundColor="Blue" TextColor="Black"
-               FontSize="36" BorderRadius="0" Clicked="OnSelectNumberBlue" />
+               FontSize="36" BorderRadius="0" Clicked="OnSelectNumberBlue" Grid.ColumnSpan="2"/>
 
-            <Button Text="500"  Margin="10, 5, 10, 10" Grid.Row="4" Grid.Column="2"
+            <Button Text="500"   Grid.Row="4" Grid.Column="2"
                BackgroundColor="Red" TextColor="Black"
-               FontSize="36" BorderRadius="0" Clicked="OnSelectNumberRed" />
+               FontSize="36" BorderRadius="0" Clicked="OnSelectNumberRed" Grid.ColumnSpan="2"/>
 
-            <Button Text="100"  Margin="10, 5, 10, 10" Grid.Row="5" Grid.Column="0"
+            <Button Text="100"   Grid.Row="5" Grid.Column="0"
                BackgroundColor="Blue" TextColor="Black"
-               FontSize="36" BorderRadius="0" Clicked="OnSelectNumberBlue" />
+               FontSize="36" BorderRadius="0" Clicked="OnSelectNumberBlue" Grid.ColumnSpan="2"/>
 
-            <Button Text="100"  Margin="10, 5, 10, 10" Grid.Row="5" Grid.Column="2"
+            <Button Text="100"   Grid.Row="5" Grid.Column="2"
                BackgroundColor="Red" TextColor="Black"
-               FontSize="36" BorderRadius="0" Clicked="OnSelectNumberRed" />
+               FontSize="36" BorderRadius="0" Clicked="OnSelectNumberRed" Grid.ColumnSpan="2"/>
 
-            <Button Text="50"  Margin="10, 5, 10, 10" Grid.Row="6" Grid.Column="0"
+            <Button Text="50"   Grid.Row="6" Grid.Column="0"
                BackgroundColor="Blue" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumberBlue" />
+                FontSize="36" BorderRadius="0" Clicked="OnSelectNumberBlue" Grid.ColumnSpan="2"/>
 
-            <Button Text="50"  Margin="10, 5, 10, 10" Grid.Row="6" Grid.Column="2"
+            <Button Text="50"   Grid.Row="6" Grid.Column="2"
                BackgroundColor="Red" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnSelectNumberRed" />
-
-            <Button Text="="  Margin="10, 5, 10, 10" Grid.Row="7" Grid.Column="0"
+                FontSize="36" BorderRadius="0" Clicked="OnSelectNumberRed" Grid.ColumnSpan="2"/>
+              <!--Button that calls for the calculation result to be returned-->
+            <Button Text="="   Grid.Row="7" Grid.Column="0"
                BackgroundColor="Blue" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnCalculateBlue" />
+                FontSize="36" BorderRadius="0" Clicked="OnCalculateBlue" Grid.ColumnSpan="2"/>
 
-            <Button Text="="  Margin="10, 5, 10, 10" Grid.Row="7" Grid.Column="2"
+            <Button Text="="   Grid.Row="7" Grid.Column="2"
                BackgroundColor="Red" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnCalculateRed" />
+                FontSize="36" BorderRadius="0" Clicked="OnCalculateRed" Grid.ColumnSpan="2"/>
+
+            <Button Text="New Game"   Grid.Row="8" Grid.Column="0"
+               BackgroundColor="Silver" TextColor="Black"
+                FontSize="36" BorderRadius="0" Clicked="OnSelectNewGame" Grid.ColumnSpan="4"/>
+
+
 
         </Grid>
     </StackLayout>
