--- a/MobileAppProjectV2/MobileAppProjectV2/CoinPage.xaml
+++ b/MobileAppProjectV2/MobileAppProjectV2/CoinPage.xaml
@@ -3,9 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileAppProjectV2.CoinPage">
     <ContentPage.Content>
-        <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-            <Image x:Name="CoinImage" Source="MobileAppProjectV2.Images.coin_tex_head.png" Aspect="AspectFill" />
-            <Button x:Name="CoinFlipper" Clicked="CoinFlipper_Clicked" />
+        <StackLayout HorizontalOptions="Center" VerticalOptions="Center" >
+            <!--Image tag that when the button is pressed, depending on the result will display the corresponding image-->
+            <Image x:Name="CoinImage" Source="MobileAppProjectV2.Images.coin_tex_head.png" Aspect="AspectFill"/>
+            <!--Button that when pressed calls the CoinFlipper_Clicked method to display an Image-->
+            <Button x:Name="CoinFlipper" Text="Flip Coin" BackgroundColor="Silver" TextColor="Black" Clicked="CoinFlipper_Clicked" />
+            <!--Label that when the button is pressed displays the result of the coin flip-->
+            <Label x:Name="Result" Text=" " HorizontalTextAlignment="Center" BackgroundColor="Silver"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
