--- a/MobileAppProjectV2/MobileAppProjectV2/MainPage.xaml
+++ b/MobileAppProjectV2/MobileAppProjectV2/MainPage.xaml
@@ -2,12 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MobileAppProjectV2"
-             x:Class="MobileAppProjectV2.MainPage">
+             x:Class="MobileAppProjectV2.MainPage" BackgroundColor="Black">
 
-    <StackLayout HorizontalOptions="Center" 
-                 VerticalOptions="Center">
-        <Button x:Name="btnEnter" Text="Click Me" 
+    <StackLayout HorizontalOptions="CenterAndExpand"  
+                 VerticalOptions="CenterAndExpand" >
+        <Image Source="QuantumCube.png" VerticalOptions="Start" />
+        <Button x:Name="btnEnter" Text="Enter Duel" 
                 Margin="10, 5, 10, 10"
+                BackgroundColor="Silver"
                 Clicked="btnEnter_Clicked"/>
 
     </StackLayout>
